// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsDialog > Initial Rendering > should render settings list with visual indicators 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Налаштування                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Пошук для фільтрації                                                                         │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│  ● Preview Features (e.g., models)                      false                                    │
│                                                                                                  │
│    Vim Mode                                             false                                    │
│                                                                                                  │
│    Language                                             Українська                               │
│                                                                                                  │
│    Disable Auto Update                                  false                                    │
│                                                                                                  │
│    Command Name                                         gemini-ua                                │
│                                                                                                  │
│    Enable Prompt Completion                             false                                    │
│                                                                                                  │
│    Debug Keystroke Logging                              false                                    │
│                                                                                                  │
│    Enable Session Cleanup                               false                                    │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Застосувати до                                                                                │
│  ● Налаштування користувача                                                                      │
│    Налаштування робочого простору                                                                │
│    Системні налаштування                                                                         │
│                                                                                                  │
│  (Enter — вибрати, Tab — змінити фокус, Esc — закрити)                                           │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'accessibility settings enabled' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Налаштування                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Пошук для фільтрації                                                                         │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│  ● Preview Features (e.g., models)                      false                                    │
│                                                                                                  │
│    Vim Mode                                             true*                                    │
│                                                                                                  │
│    Language                                             Українська                               │
│                                                                                                  │
│    Disable Auto Update                                  false                                    │
│                                                                                                  │
│    Command Name                                         gemini-ua                                │
│                                                                                                  │
│    Enable Prompt Completion                             false                                    │
│                                                                                                  │
│    Debug Keystroke Logging                              false                                    │
│                                                                                                  │
│    Enable Session Cleanup                               false                                    │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Застосувати до                                                                                │
│  ● Налаштування користувача                                                                      │
│    Налаштування робочого простору                                                                │
│    Системні налаштування                                                                         │
│                                                                                                  │
│  (Enter — вибрати, Tab — змінити фокус, Esc — закрити)                                           │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'all boolean settings disabled' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Налаштування                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Пошук для фільтрації                                                                         │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│  ● Preview Features (e.g., models)                      false                                    │
│                                                                                                  │
│    Vim Mode                                             false*                                   │
│                                                                                                  │
│    Language                                             Українська                               │
│                                                                                                  │
│    Disable Auto Update                                  false*                                   │
│                                                                                                  │
│    Command Name                                         gemini-ua                                │
│                                                                                                  │
│    Enable Prompt Completion                             false*                                   │
│                                                                                                  │
│    Debug Keystroke Logging                              false*                                   │
│                                                                                                  │
│    Enable Session Cleanup                               false                                    │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Застосувати до                                                                                │
│  ● Налаштування користувача                                                                      │
│    Налаштування робочого простору                                                                │
│    Системні налаштування                                                                         │
│                                                                                                  │
│  (Enter — вибрати, Tab — змінити фокус, Esc — закрити)                                           │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'default state' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Налаштування                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Пошук для фільтрації                                                                         │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│  ● Preview Features (e.g., models)                      false                                    │
│                                                                                                  │
│    Vim Mode                                             false                                    │
│                                                                                                  │
│    Language                                             Українська                               │
│                                                                                                  │
│    Disable Auto Update                                  false                                    │
│                                                                                                  │
│    Command Name                                         gemini-ua                                │
│                                                                                                  │
│    Enable Prompt Completion                             false                                    │
│                                                                                                  │
│    Debug Keystroke Logging                              false                                    │
│                                                                                                  │
│    Enable Session Cleanup                               false                                    │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Застосувати до                                                                                │
│  ● Налаштування користувача                                                                      │
│    Налаштування робочого простору                                                                │
│    Системні налаштування                                                                         │
│                                                                                                  │
│  (Enter — вибрати, Tab — змінити фокус, Esc — закрити)                                           │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'file filtering settings configured' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Налаштування                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Пошук для фільтрації                                                                         │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│  ● Preview Features (e.g., models)                      false                                    │
│                                                                                                  │
│    Vim Mode                                             false                                    │
│                                                                                                  │
│    Language                                             Українська                               │
│                                                                                                  │
│    Disable Auto Update                                  false                                    │
│                                                                                                  │
│    Command Name                                         gemini-ua                                │
│                                                                                                  │
│    Enable Prompt Completion                             false                                    │
│                                                                                                  │
│    Debug Keystroke Logging                              false                                    │
│                                                                                                  │
│    Enable Session Cleanup                               false                                    │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Застосувати до                                                                                │
│  ● Налаштування користувача                                                                      │
│    Налаштування робочого простору                                                                │
│    Системні налаштування                                                                         │
│                                                                                                  │
│  (Enter — вибрати, Tab — змінити фокус, Esc — закрити)                                           │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'focused on scope selector' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│    Налаштування                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Пошук для фільтрації                                                                         │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│    Preview Features (e.g., models)                      false                                    │
│                                                                                                  │
│    Vim Mode                                             false                                    │
│                                                                                                  │
│    Language                                             Українська                               │
│                                                                                                  │
│    Disable Auto Update                                  false                                    │
│                                                                                                  │
│    Command Name                                         gemini-ua                                │
│                                                                                                  │
│    Enable Prompt Completion                             false                                    │
│                                                                                                  │
│    Debug Keystroke Logging                              false                                    │
│                                                                                                  │
│    Enable Session Cleanup                               false                                    │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│  > Застосувати до                                                                                │
│  ● 1. Налаштування користувача                                                                   │
│    2. Налаштування робочого простору                                                             │
│    3. Системні налаштування                                                                      │
│                                                                                                  │
│  (Enter — вибрати, Tab — змінити фокус, Esc — закрити)                                           │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'mixed boolean and number settings' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Налаштування                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Пошук для фільтрації                                                                         │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│  ● Preview Features (e.g., models)                      false                                    │
│                                                                                                  │
│    Vim Mode                                             false*                                   │
│                                                                                                  │
│    Language                                             Українська                               │
│                                                                                                  │
│    Disable Auto Update                                  true*                                    │
│                                                                                                  │
│    Command Name                                         gemini-ua                                │
│                                                                                                  │
│    Enable Prompt Completion                             false                                    │
│                                                                                                  │
│    Debug Keystroke Logging                              false                                    │
│                                                                                                  │
│    Enable Session Cleanup                               false                                    │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Застосувати до                                                                                │
│  ● Налаштування користувача                                                                      │
│    Налаштування робочого простору                                                                │
│    Системні налаштування                                                                         │
│                                                                                                  │
│  (Enter — вибрати, Tab — змінити фокус, Esc — закрити)                                           │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'tools and security settings' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Налаштування                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Пошук для фільтрації                                                                         │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│  ● Preview Features (e.g., models)                      false                                    │
│                                                                                                  │
│    Vim Mode                                             false                                    │
│                                                                                                  │
│    Language                                             Українська                               │
│                                                                                                  │
│    Disable Auto Update                                  false                                    │
│                                                                                                  │
│    Command Name                                         gemini-ua                                │
│                                                                                                  │
│    Enable Prompt Completion                             false                                    │
│                                                                                                  │
│    Debug Keystroke Logging                              false                                    │
│                                                                                                  │
│    Enable Session Cleanup                               false                                    │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Застосувати до                                                                                │
│  ● Налаштування користувача                                                                      │
│    Налаштування робочого простору                                                                │
│    Системні налаштування                                                                         │
│                                                                                                  │
│  (Enter — вибрати, Tab — змінити фокус, Esc — закрити)                                           │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`SettingsDialog > Snapshot Tests > should render 'various boolean settings enabled' correctly 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│  > Налаштування                                                                                  │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ Пошук для фільтрації                                                                         │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│                                                                                                  │
│  ▲                                                                                               │
│  ● Preview Features (e.g., models)                      false                                    │
│                                                                                                  │
│    Vim Mode                                             true*                                    │
│                                                                                                  │
│    Language                                             Українська                               │
│                                                                                                  │
│    Disable Auto Update                                  true*                                    │
│                                                                                                  │
│    Command Name                                         gemini-ua                                │
│                                                                                                  │
│    Enable Prompt Completion                             true*                                    │
│                                                                                                  │
│    Debug Keystroke Logging                              true*                                    │
│                                                                                                  │
│    Enable Session Cleanup                               false                                    │
│                                                                                                  │
│  ▼                                                                                               │
│                                                                                                  │
│    Застосувати до                                                                                │
│  ● Налаштування користувача                                                                      │
│    Налаштування робочого простору                                                                │
│    Системні налаштування                                                                         │
│                                                                                                  │
│  (Enter — вибрати, Tab — змінити фокус, Esc — закрити)                                           │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
